argocd-ingress/argocd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    app.kubernetes.io/component: argocd-ingress
  name: argo-cd-ingress
  namespace: devopsnow
spec:
  rules:
  - host: pearjet-deploy.observe.devopsnow.cloud
    http:
      paths:
      - backend:
          serviceName: remote-bootstrap-now-argocd-server
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
